<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".detail.DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp">
    <ImageView
        android:id="@+id/img_poster"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/poster_alita"
        android:scaleType="center" />
        <ImageButton
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:onClick="back"
            android:background="@android:color/transparent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginStart="140dp"
        android:elevation="5dp"
        android:gravity="end|center"
        android:orientation="horizontal"
        android:paddingEnd="30dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/roundimage">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt_lg"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:background="@drawable/rectangleborder"
                android:text="@string/en"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/language"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_marginStart="20dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt_score"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@drawable/roundimageborder"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:text="@string/_68"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/score"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_marginStart="20dp"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/img_share"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_share_blue"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/share" />
        </LinearLayout>
    </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text=""/>
        <TextView
            android:id="@+id/txt_tagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textStyle="bold"
            android:textSize="12sp"
            android:text=""/>

        <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <TextView
               android:id="@+id/txt_date"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               app:layout_constraintBottom_toBottomOf="parent"
               android:textSize="13sp"
               android:text=""/>
           <TextView
               android:id="@+id/txt_status"
               android:layout_alignParentEnd="true"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:background="@color/yellow"
               android:textColor="@color/black"
               android:textStyle="bold"
               android:paddingStart="5dp"
               android:paddingEnd="5dp"
               app:layout_constraintBottom_toBottomOf="parent"
               android:textSize="13sp"
               android:text="@string/release"/>
       </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/overview"/>
        <TextView
            android:id="@+id/txt_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:text=""/>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>